feat: add Java functional programming practice examples and utilities