@@ -4,7 +4,6 @@ import java.util.Arrays;
 import java.util.List;
 import java.util.function.Function;
 import java.util.function.Predicate;
-import java.util.stream.Collectors;
 
 public class BehaviourParameterization {
     public static void main(String[] args) {
@@ -29,6 +28,6 @@ public class BehaviourParameterization {
     }
 
     private static List<Integer> mapAndCreateNewList(List<Integer> numbers, Function<Integer, Integer> function) {
-        return numbers.stream().map(function).collect(Collectors.toList());
+        return numbers.stream().map(function).toList();
     }
 }
